# opencode-customizations

./: .coverage  .gitignore  AGENTS.md  README.md  coverage.json  package.json  promptfooconfig.yaml  pyproject.toml
.beads/: issues.jsonl  last-touched  sync_base.jsonl
.github/workflows/: test.yml
_bmad-output/: automation-summary.md
_bmad-output/implementation-artifacts/: 1-1-cli-entry-point.md  1-2-agent-execution.md  1-3-output-detection-pass-fail.md  1-4-basic-error-handling.md  epic-1-retro-2026-01-14.md  sprint-change-proposal-2026-01-17.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2026-01-17.md  prd-validation.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/bmm/workflows/4-implementation/code-review/: instructions.xml
_bmad/core/: config.yaml
docs/: CLI-UX-GUIDELINES.md  architecture-patterns.md  architecture.md  component-inventory.md  comprehensive-analysis.md  contribution-guide.md  critical-folders-summary.md  deployment-guide.md  development-guide.md  existing-documentation-inventory.md  index.md  project-overview.md  project-parts-metadata.md  project-scan-report.json  project-structure.md  source-tree-analysis.md  technology-stack.md  user-provided-context.md
evals/: eval_youtube_obsidian.py  test_eval_youtube_obsidian.py  test_youtube_obsidian_eval.py
evals/test_data/: test_cases.json
opencode_customizations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: capture_test_data.py
skills/youtube-obsidian/: .coverage  SKILL.md
skills/youtube-obsidian/scripts/: .coverage  conftest.py  get_youtube_data.py  test_create_obsidian_note_expanded.py  test_generate_tags_expanded.py  test_get_transcript_expanded.py  test_get_video_metadata_expanded.py  test_get_youtube_data.py  test_helpers.py  test_write_obsidian_note.py  test_yt.py  write_obsidian_note.py  yt.py
(+8 files in other folders)
