[project]
name = "opencode-customizations"
version = "0.1.0"
description = "A collection of Opencode agents, skills, tools and commands to customise Opencode's capabilities and behaviour"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skills*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.basedpyright]
typeCheckingMode = "standard"
